--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -59,7 +59,7 @@
                         <li><a class="dropdown-item active" href="./agro-commodities.html">Agro Commodities</a></li>
                         <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
                         <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
-                        <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
+                        <li><a class="dropdown-item" href="./metals.html">Metals</a></li>
                         <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                         <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                                 Fertilizers</a></li>
@@ -118,7 +118,7 @@
                     <li><a class="dropdown-item active" href="./agro-commodities.html">Agro Commodities</a></li>
                     <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
                     <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
-                    <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
+                    <li><a class="dropdown-item" href="./metals.html">Metals</a></li>
                     <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                     <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
                     </li>
