--- a/building-materials.html
+++ b/building-materials.html
@@ -58,9 +58,9 @@
                                 Products</a></li>
                         <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                         <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                        <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
-                        <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
-                        <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
+                        <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                        <li><a class="dropdown-item" href="./metals.html">Metals</a></li>
+                        <li><a class="dropdown-item active" href="./building-materials.html">Building Materials</a></li>
                         <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                                 Fertilizers</a></li>
                     </ul>
@@ -117,9 +117,9 @@
                     </li>
                     <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                     <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                    <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
-                    <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
-                    <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
+                    <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                    <li><a class="dropdown-item" href="./metals.html">Metals</a></li>
+                    <li><a class="dropdown-item active" href="./building-materials.html">Building Materials</a></li>
                     <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
                     </li>
                 </ul>
