--- a/metals.html
+++ b/metals.html
@@ -58,7 +58,7 @@
                                 Products</a></li>
                         <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                         <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                        <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                        <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
                         <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
                         <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                         <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
@@ -117,7 +117,7 @@
                     </li>
                     <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                     <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                    <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                    <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
                     <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
                     <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                     <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
