--- a/metals.html
+++ b/metals.html
@@ -122,7 +122,7 @@
                     <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                     <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
                     </li>
-                </ul>     
+                </ul>
             </li>
             <li><a href="./our-services.html">Our Services</a></li>
             <li><a href="./contact-us.html">Contact Us</a></li>
@@ -158,18 +158,25 @@
                 <img src="./assets/images/metals/hero-img/metal-hero-img-2.webp" class="d-block w-100"
                     alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Tailored Metal Solutions for Your Business</h1>
+                    <p class="text-center">
+                        No matter your project’s complexity, Bhagirath Industry delivers customized metal solutions to
+                        suit your needs. Our team works closely with you to design and provide the perfect metal
+                        products that align with your goals, enhancing performance, cost-efficiency, and quality across
+                        the board.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
                 <img src="./assets/images/metals/hero-img/metal-hero-img-3.webp" class="d-block w-100"
                     alt="Hero Image 3">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
-                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                    <h1>Precision-Processed Metals for Every Need</h1>
+                    <p class="text-center">
+                        Our processed metals are expertly crafted to meet the specific requirements of your industry.
+                        From cutting and shaping to specialized treatments, Bhagirath Industry ensures each piece meets
+                        precise specifications, providing the ideal material for your most demanding applications.
+                    </p>
                 </div>
             </div>
             <!-- <div class="carousel-item carousel-item-custom-height">
@@ -200,10 +207,13 @@
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
             <p class="text-center regular-font">
-                Discover top-quality polymers at Bhagirath Industry. As leading suppliers, we provide a wide range of
-                innovative polymer solutions. Our commitment to excellence ensures industries receive premium-grade
-                materials, promoting efficiency and sustainability. Partner with us for all your polymer needs, driving
-                progress through advanced chemical solutions.
+                At Bhagirath Industry, we offer a wide range of high-quality metal products designed to meet the needs
+                of various industries. Our metal solutions are crafted with precision and durability, ensuring superior
+                performance in every application. From construction and manufacturing to automotive and infrastructure,
+                we provide reliable metals that withstand the test of time. Whether you’re looking for steel, aluminum,
+                or specialized alloys, Bhagirath Industry delivers the strength, flexibility, and quality required to
+                support your business and enhance your projects. Trust us for the finest metals that drive innovation
+                and efficiency.
             </p>
         </div>
         <div class="row">
